added some swagger params
